# fortuna-cpu-miner

./: Cargo.toml  Dockerfile  README.md  mine.bat  mine.sh
.github/workflows/: release.yml
src/: main.rs
