[package]
name = "fortuna-cpu-miner"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
async-std = "1.12.0"
async-channel = "2.3.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time"] }
rand = "0.9.0-alpha.1"
regex = "1.10.5"
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
anyhow = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
num_cpus = "1.16.0"
clap = { version = "4.5.7", features = ["cargo"] }
